# seattle-code-python-401n3

./: README.md
class-01/: README.md
class-01/demo_project/: pyproject.toml
class-02/: README.md
class-03/: README.md
class-04/: whiteboard.py
class-04/star-wars/: pyproject.toml
class-05/linked-list/: linked_list.py  pyproject.toml  test_linked_list.py
class-06/: README.md  coll.py  ran.py
class-06/warmup/: random1.py
class-07/: README.md
class-07/builtins/: main.py
class-07/linked_list/: linked_list.py  pyproject.toml  test_linked_list.py  white_board.py
class-08/: code_challenge.md  warmup.md
class-08/exit_demo/: pyproject.toml  text_exit.py
class-09/: README.md  warmup.md
class-11/demo/: Untitled.ipynb  chessboard.ipynb  pyproject.toml
class-11/warm-up/: warm-up.md
class-12/demo/: cereal.ipynb  pyproject.toml
class-12/review/: bike-stats.ipynb  pyproject.toml  vg-stats.ipynb
class-13/demo/: salary.ipynb
class-13/warmup/: ll.py
class-14/: README.md  warmup.py
class-19/: README.md
class-20/: README.md
class-26/: README.md  warmup.py
class-29/thing-a-ma-bob/: pyproject.toml
class-29/thing-a-ma-bob/config/: settings.py  urls.py
class-29/thing-a-ma-bob/templates/things/: things-create.html  things-delete.html  things-detail.html  things-list.html  things-update.html
class-29/thing-a-ma-bob/things/: admin.py  models.py  views.py
class-29/thing-a-ma-bob/things/migrations/: 0001_initial.py
class-30/: README.md
class-30/demos/hashtable/: hashtable.py  pyproject.toml  test_hashtable.py
class-31/: warmup.py
class-32/: lambda.py
class-32/blog_pg/: docker-compose.yml  manage.py  pyproject.toml  requirements.txt
class-32/blog_pg/blog_api_project/: settings.py  urls.py  wsgi.py
class-32/blog_pg/posts/: views.py
class-33/: README.md
class-34/: README.md  aws.md  heroku.md
class-34/blog/: docker-compose.yml  pyproject.toml  requirements.txt
class-34/blog/blog_api_project/: env_example.txt  settings.py
class-34/blog/posts/: models.py  urls.py
class-36/: bst.py  ll.py
class-37/: README.md
class-38/: README.md  c38_challenge.py  ll_challenge.py
class-42/demo/: deco.py  linked_list_iterator.py  pyproject.toml  test_linked_list_interator.py
(+159 files in other folders)
