[tool.poetry]
name = "hashmap"
version = "0.1.0"
description = ""
authors = ["JB-Tellez <jb.tellez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
codefellows = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest-watch = "^4.2.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
